@@ -1,11 +1,19 @@
 FROM gradle:6.8.3-jdk8 AS BUILD
 
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon 
+
+FROM openjdk:8-jre-slim
+
 ARG DATA_TO_BUILD
 
 EXPOSE 9090
 
-ENTRYPOINT java ${JVM_ARGS: - -Xms128m -Xmx128m} -Djava.security.egd=file:/dev/./urandom -DUser.language=pt -DUser.country=BR jar app.jar
-ADD build/libs/auth-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+
 
 LABEL maintainer="SGM - Sistema de Gestão Integrada Municipal" \
       org.label-schema.name="SGM" \
